--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shengmin Jin"
-  avatar           : "profile.png"
+  avatar           : "s-l300.jpg"
   bio              : "A Ph.D Candidate at Syracuse University"
   location         : "Location"
   employer         :
