--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,7 @@ author:
   bitbucket        :
   codepen          :
   dribbble         :
+  douban           : "https://www.douban.com/people/51152880/"
   flickr           :
   facebook         :
   foursquare       :
