--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shengmin Jin"
   avatar           : "s-l300.jpg"
-  bio              : "A Ph.D Candidate at Syracuse University"
+  bio              : "Anythng but ordinary."
   #location         : "Location"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
