--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Shengmin Jin"
+title                    : "Shengmin Jin/Life of Science"
 title_separator          : "-"
 name                     : &name "Shengmin Jin"
 description              : &description "A Ph.D Candidate at Syracuse University"
