--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  tutorials:
+    output: true
+    permalink: /:collection/:path/
 #  portfolio:
 #    output: true
 #    permalink: /:collection/:path/
@@ -228,6 +231,16 @@ defaults:
       author_profile: true
       share: true
       comments: true
+      
+  # _publications
+  - scope:
+      path: ""
+      type: tutorials
+    values:
+      layout: single
+      author_profile: false
+      share: false
+      comments: false
   # _portfolio
 #  - scope:
 #      path: ""
